2003-03-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added some missing semi-colons in Chinese strings files.


2003-03-08	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed an issue where '=', '/', and '*' could not be 
      typed from numeric keypad. This was because those 
      keys were mapped to the PF2, PF3, PF4 keys. Now we 
      have a numLock state that is on by default. When 
      state is enabled, numeric keypad has the default 
      operation. When it is disabled, the keys 
      'numlock', '=', '/', and '*' send PF1, PF2, PF3, 
      and PF4 sequences. The state can be toggled by using 
      Cmd-numLock. This behavior is basically the same as 
      that implemented in GLTerm.
      

2003-03-04	fabian
    * Fixed a bug in screen update
    
2003-03-04	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a bug in changing forground and background color 
      in a session.
      

2003-03-03	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Incorporated Max Horn's patches for a variety of 
      enhancements and fixes for some bugs and memory leaks.
      

2003-03-02	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a screen update bug. Sometimes screen HAS to be 
      updated even if minIndex == [BUFFER length], e.g. when 
      doing ^u on the last line.
      

2003-03-01	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a warning bell orientation bug.
    

2003-02-28	fabian
    * Fixed a bug that cause incorrect screen update
      in BUFFER mode
      
2003-02-27	fabian
    * Fixed cursor code in ARRAY mode
    * Fixed more double-width character stuff in ARRAY mode, 
      display should be fully working now
    * We now use the taller one between font and nafont to
      decide the lineHeight.
    * Fixed bugs in scrollUp and scrollDown in ARRAY mode
    * Added some #ifdef to make code compatible in BUFFER mode.
    
2003-02-26	fabian
    * Fixed general double-width character processing in ARRAY mode